tests/fixtures/invalid/pow_bool_int_dict.py
# Cannot call pow() with Bool, Int, Dict[str, int]
x = pow(True, 1, {"a": 1})
